--- a/Week-0-Challenge/webpages/search.html
+++ b/Week-0-Challenge/webpages/search.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -7,11 +8,29 @@
     <title>Google Search</title>
 
     <link rel="stylesheet" href="search.css">
+    <script type="text/javascript" src="search.js" async></script>
 
 </head>
-<body>
-    <script type="text/javascript">
 
-    </script>
+<body>
+<div class="image_button">
+        <button onclick="window.location.href='\images.html'">Images</button>
+    </div>
+    <div class=" adv_search_button ">
+        <button onclick="window.location.href='\adv_search.html'">Advanced Search</button>
+    </div>
+
+
+    <div class="image">
+        <img src="google_PNG.png" alt="Google Logo">
+    </div>
+    <div class="search_box">
+        <input type="text" name="" class="query" value="">
+    </div>
+    <div class="search_button">
+        <button class="button">Google Search</button>
+</div>
+
+    
 </body>
 </html>
