--- a/Week-0-Challenge/webpages/images.html
+++ b/Week-0-Challenge/webpages/images.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -9,9 +10,28 @@
     <link rel="stylesheet" href="images.css">
 
 </head>
-<body>
-    <script type="text/javascript">
 
-    </script>
+<body>
+
+    <div class="image_button">
+        <button onclick="window.location.href='index.html'">Search</button>
+    </div>
+    <div class=" adv_search_button">
+        <button onclick="window.location.href='adv_search.html'">Advanced Search</button>
+    </div>
+
+
+    <div class="image">
+        <img src="Google_Images.svg" alt="Google Images logo">
+    </div>
+    <div class="search_box">
+        <input type="text " name="" class="query" value="">
+    </div>
+    <div class="search_button">
+        <button class="button ">Google Search</button>
+    </div>
+<script type="text/javascript " src="images.js">
+
 </body>
+
 </html>
