--- a/Week-0-Challenge/webpages/adv_search.html
+++ b/Week-0-Challenge/webpages/adv_search.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -9,9 +10,37 @@
     <link rel="stylesheet" href="adv_search.css">
 
 </head>
-<body>
-    <script type="text/javascript">
 
-    </script>
+<body>
+    <header class="header">
+        <div class="logo">
+            <img src="google_PNG.png" alt="google logo">
+        </div>
+        <div class="search_button">
+            <button onclick="window.location.href='search.html'">Search</button>
+        </div>
+        <div class="image_button">
+            <button onclick="window.location.href='images.html'">Images</button>
+    </header>
+
+    <div class="heading">
+        <h1>Advanced Search</h1>
+    </div>
+    <hr>
+    <form class="container">
+        <label for="all">All these words:</label>
+        <input type="text" id="all" value="" class="query1"><br><br><br>
+        <label for="exact">This exact word or phrase:</label>
+        <input type="text" id="exact" value="" class="query2"><br><br><br>
+        <label for="any">Any of these words:</label>
+        <input type="text" id="any" value="" class="query3"><br><br><br>
+        <label for="none">none of these words:</label>
+        <input type="text" id="none" value="" class="query4"><br><br><br>
+
+    </form>
+    <div class="adv_search_button">
+        <button class="adv_button">Advanced Search</button>
+    </div>
+<script type="text/javascript " src="adv_search.js">
 </body>
 </html>
